--- a/FRONT/DressCode2024/angular.json
+++ b/FRONT/DressCode2024/angular.json
@@ -26,11 +26,16 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/boxicons/css/boxicons.min.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": ["node_modules/jquery/dist/jquery.min.js",
             "node_modules/@popperjs/core/dist/umd/popper.min.js",
-            "node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "node_modules/bootstrap/dist/js/bootstrap.min.js",
+            "node_modules/boxicons/dist/boxicons.js",
+            "node_modules/sweetalert2/dist/sweetalert2.min.js"
+            ]
           },
           "configurations": {
             "production": {
